--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,32 @@
-[tool.poetry]
+[project]
 name = "justpath"
 version = "0.0.17"
 description = "Explore PATH environment variable on Windows and Linux."
-authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
-license = "GNU"
+authors = [{ name = "Evgeny Pogrebnyak", email = "e.pogrebnyak@gmail.com" }]
+license = { file = "LICENSE" }
 readme = "README.md"
+requires-python = ">=3.10"
+dependencies = ["colorama>=0.4.6", "typer>=0.15.1"]
+
+[project.urls]
 repository = "https://github.com/epogrebnyak/justpath"
 
-[tool.poetry.scripts]
+[project.scripts]
 pathit = "justpath.show:typer_app"
 justpath = "justpath.show:typer_app"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-typer = "^0.9.0"
-colorama = "^0.4.6"
-types-colorama = "^0.4.15.20240106"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.8.0"
-ruff = "^0.1.14"
-isort = "^5.13.2"
-black = "^24.1.1"
-pytest = "^8.0.0"
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["justpath"]
+
+[dependency-groups]
+dev = [
+    "black>=24.10.0",
+    "isort>=5.13.2",
+    "mypy>=1.14.1",
+    "pytest>=8.3.4",
+    "ruff>=0.8.6",
+]
