Add sandbox and tests packages to setuptools configuration
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["justpath"]
+packages = ["justpath", "sandbox", "tests"]
 
 [dependency-groups]
 dev = [
