--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,5 +1,13 @@
-name: CI
-on: push
+name: Python Build
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+on:
+  push:
+    branches: [main, develop]
+  pull_request:
+    branches: [main]
 
 jobs:
   ci:
@@ -7,18 +15,19 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
-        poetry-version: ["1.7.1"]
         os: [ubuntu-22.04, macos-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+
+      - name: Install 'uv'
+        uses: astral-sh/setup-uv@v5
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          enable-cache: false
+          prune-cache: false
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-      - run: poetry install      
-      - run: pip install -e . # this is for Windows runnable justpath.exe to exist
-      - run: poetry run pytest
+
+      - run: uv build
+      - run: uv run pytest
